# rsomics-ancom

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs  stats.rs  table.rs
tests/: compat.rs  mkfixture.py  oracle_skbio.py
tests/golden/: degenerate_groups.tsv  inf_table.tsv  med_expected_holm.tsv  med_groups.tsv  med_table.tsv  nan_table.tsv  small_expected_bh.tsv  small_expected_holm.tsv  small_groups.tsv  small_table.tsv  zero_table.tsv
