[package]
name = "rsomics-ancom"
version = "0.1.1"
description = "ANCOM differential abundance (Mandal et al 2015) — scikit-bio skbio.stats.composition.ancom equivalent: per-feature W statistic from pairwise log-ratio one-way ANOVA, with the tau/theta detection cutoff"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-ancom"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-ancom"
path = "src/main.rs"

[lib]
name = "rsomics_ancom"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
